--- a/en/EU4_l_english.properties
+++ b/en/EU4_l_english.properties
@@ -754,7 +754,7 @@ PARL_ISSUE_TITLE코0=Select Issue to push through $NAME$
 SEAT_PRO_ISSUE코0=This seat is backing the current issue.
 SEAT_BRIBE2코0=$NAME$ is currently opposing this issue. You can bribe them to back the issue, but that will have the following effects:\n
 SEAT_AGAINST_ISSUE코0=This seat is opposing the current issue.
-PARLIAMENT_NEEDED코0=With §Y$COUNTRY|Y$§! non-overseas cities and a $NAME$ that requires at least §Y$PERC$%§! of its provinces represented, we need $NEED|Y$ seats in it.
+PARLIAMENT_NEEDED코1=With §Y$COUNTRY|Y$§! non-overseas core Provinces and a $NAME$ that requires at least §Y$PERC$%§! of its provinces represented, we need $NEED|Y$ seats in it.
 TRIG_HAS_NO_PARLIAMENT코0=Have No Parliament\n
 TRIG_HAS_PARLIAMENT코0=Have a Parliament\n
 TRIG_HAS_NO_SEAT_IN_PARL코0=$NAME$ does NOT have a seat in $PARL$.\n
@@ -2407,7 +2407,7 @@ cb_change_government코0=Government Form War
 cb_change_government_desc코0=We should force them to have the same government form as ours!
 claiming_the_shogunate_tooltip코0=[new_shogunate.GetName] will be the leader of the new Shogunate.\nAll Daimyo's loyal to the Shogunate will be transferred to [new_shogunate.GetName].
 INDEPENDENCE_WAR_NAME코0=$ORDER$$FIRST$ War for Independence
-DEFENDER_DESC코1=The Defender of the Faith gets Casus Belli to enforce religious unity. This will cost §Y$VALUE$§W¤. After §Y$MONTHS$§W months, countries with more prestige than the current Defender can claim the title. \nYou'll also lose if you decline a call to war from a country of your faith being attacked by infidels.
+DEFENDER_DESC코2=The Defender of the Faith gets Casus Belli to enforce religious unity. This will cost §Y$VALUE$§W¤. After §Y$MONTHS$§W months, countries with more prestige than the current Defender can claim the title. \nYou'll also lose if you decline a call to war from a country of your faith being attacked by infidels, or if you lose a war to infidels.
 CARDINAL_NEW코0=§YActive cardinal§!\nWe control this active cardinal from $HOME|Y$. Each active cardinal gives us $BENEFIT$ Papal Influence per year.
 NO_ACTIVE_CARDINALS코0=Spend your papal influence to vote on future cardinals to increase your chance to control a cardinal in the Papacy in the future.
 OPEN_PAPACY코0=§YPapacy view§!\nClick here to open the papacy view.
@@ -2517,8 +2517,8 @@ HAVE_LESS_AVERAGE_AUTONOMY_ABOVE_MIN_THAN코0=Average autonomy above minimum is 
 HAVE_AT_LEAST_AVERAGE_AUTONOMY_ABOVE_MIN코0=Average autonomy above minimum is $VAL|Y$% or higher.\n
 HAVE_LESS_LOCAL_AUTONOMY_ABOVE_MIN_THAN코0=Local autonomy above minimum is less than $VAL|Y$%.\n
 HAVE_AT_LEAST_LOCAL_AUTONOMY_ABOVE_MIN코0=Local autonomy above minimum is $VAL|Y$% or higher.\n
-HAVE_LESS_AVERAGE_HOME_AUTONOMY_THAN코0=Average non-overseas autonomy is less than $VAL|Y$%.\n
-HAVE_AT_LEAST_AVERAGE_HOME_AUTONOMY코0=Average non-overseas autonomy is $VAL|Y$% or higher.\n
+HAVE_LESS_AVERAGE_HOME_AUTONOMY_THAN코1=Average non-overseas core Province autonomy is less than $VAL|Y$%.\n
+HAVE_AT_LEAST_AVERAGE_HOME_AUTONOMY코1=Average non-overseas core Province autonomy is $VAL|Y$% or higher.\n
 DIPLO_BAD_NEWS코0=bad
 DIPLO_GOOD_NEWS코0=good
 DIPLO_NEUTRAL_NEWS코0=some
@@ -2832,7 +2832,7 @@ COLONY_HISTORY코0=Became uncolonized land.
 COLONIST_PROGRESS코0=$NAME$ from $COUNTRY|Y$ will arrive at $PROVINCE$ in $DAYS$ days ($DATE$). On arrival he will start building a colony and will have a chance of $CHANCE$ to increase the population of Settlers each month.
 COLONIST_TRAVELING코0=The Colonist $NAME$ from $COUNTRY|Y$ is on his way to $PROVINCE$.
 COLONY_TRADE코0=Trade Power: $POWER|1$\nTrade Value: $VALUE|2$\nTrade Node: $NODE$
-COLONY_PROGRESS코0=There are currently $SETTLERS$ settlers here. $MAX$ is needed to create a city.
+COLONY_PROGRESS코1=There are currently $SETTLERS$ settlers here. $MAX$ are needed to create a city.
 IS_ENEMY1코0=Views
 IS_ENEMY2코0=as an enemy.
 IS_NOT_ENEMY1코0=Does not view
