--- a/en/emperor_l_english.properties
+++ b/en/emperor_l_english.properties
@@ -30,7 +30,7 @@ FABRICATE_CLAIM_ENTRY_TT코0=This will reduce our spy-network by $VAL|Y$ due to:
 PAPAL_BULL_POSSIBLE코0=§YGolden Bulls§!\nThese a the possible golden bulls that the Papal controller can enact.\n
 PAPAL_BULL_EXPLANATION코1=Golden Bulls are bonuses that the Papal Controller can enact using the Curia Coffers that benefits all Catholic Countries! They last until the current Pope dies.
 JUSTIFY_TRADE_BASE코0=The Cost for Justify Trade Conflict is based upon:\nBase Cost: $VAL|Y0$\n
-FABRICATE_CLAIM_BASE코1=§!The Cost for Fabricate Claim is based upon:\nBase Cost: $VAL|Y0$\n
+FABRICATE_CLAIM_BASE코1=The Cost for Fabricate Claim is based upon:\nBase Cost: $VAL|Y0$\n
 FABRICATE_CLAIM_INSIDE_HRE코1=Inside HRE: $VAL|-=1%$\n
 FABRICATE_ALREADY_CLAIMS코1=Already $CLAIM|Y$ Claims: $VAL|-=1%$\n
 FABRICATE_CLAIM_CAPPED코0=\nCapped At $VAL|Y$ cost!
@@ -332,8 +332,8 @@ ASSIGN_HEIR_NOT_HEIRS코0=Your form of government does not have designated heirs
 ASSIGN_HEIR_AT_WAR코0=You can not assign a new heir when at War!
 ASSIGN_HEIR_NOT_NOMADS코0=Nomads cannot assign new heirs!
 ASSIGN_HEIR_REGENCY코0=You can not assign a new heir during a regency!
-ASSIGN_HEIR_PRESTIGE코0=You lack the $VAL|Y$ prestige required to introduce a new heir
-ASSIGN_HEIR_LEGITIMACY코0=You lack the $VAL|Y$ legitimacy required to introduce a new heir
+ASSIGN_HEIR_PRESTIGE코1=You need at least $VAL|Y$ prestige to introduce a new heir - you currently have $CURRENT|Y$
+ASSIGN_HEIR_LEGITIMACY코1=You need at least $VAL|Y$ legitimacy to introduce a new heir - you currently have $CURRENT|Y$
 # Military Access Mapmode
 MILITARY_ACCESS_OWN코0=$TAG|Y$ owns this province directly
 MILITARY_ACCESS_SUBJECT코0=This province is owned by $SUBJECT|Y$ that is a subject of $TAG|Y$ thus granting military access
@@ -758,9 +758,9 @@ ALEADY_HAS_IMPERIAL_REALM_WAR_CB코0=§RWe already have declared Reichskrieg aga
 HINT_ZONEOFCONTROL_TITLE코0=Zone of Control
 HINT_ZONEOFCONTROL_TEXT코0=Manned forts provide a zone of control to the provinces surrounding them. Zones of control restricts enemy armies' movement and forces them to try and take the fort first. 
 VIEW_MISSION_TREE코0=View $COUNTRY|Y$ Mission Tree.
-VIEW_MISSION_TREE_CURRENT코0=We are currently viewing this mission tree.
-VIEW_MISSION_TREE_OURS코0=This is our country's mission tree.
-VIEW_MISSION_TREE_SUBJECT코0=We can view their missions as they are our §YSubject§!.
+VIEW_MISSION_TREE_CURRENT코1=You are currently viewing this mission tree.
+VIEW_MISSION_TREE_OURS코1=This is your country's mission tree.
+VIEW_MISSION_TREE_SUBJECT코1=You can view their missions as they are your §YSubject§!.
 ADJECTIVE_MISSION_TITLE코0=$ADJ$ Missions
 SECEDE_SUBJ_PROVINCES코0=$WHO$ will cede $WHAT$ to $TO$, changing Liberty Desire by $LD|-$.
 STATES_TAB_TOOLTIP코0=Administer States
