--- a/en/emperor_missions_l_english.properties
+++ b/en/emperor_missions_l_english.properties
@@ -2511,7 +2511,7 @@ APPOINT_CARDINAL_AT_WAR코0=§RYou cannot Appoint a Cardinal in Country with who
 IS_NOT_IN_WAR_TRIGGER_STARTS코0=Not in a War
 dof_refused_join_war코0=Dishonorable Defender of the Faith
 defender_of_faith_refused_cta코0=Dishonorable Defender of the Faith
-COUNTRY_NAME_WILL_CHANGE_IN코0=Country name will change to $NAME|Y$
+COUNTRY_NAME_WILL_CHANGE_IN코0=Country name will change to $NAME|Y$.
 COUNTRY_NAME_WILL_BE_RESTORED코0=Country name will be restored to the original value
 KINGDOM_OF_GOD코0=Kingdom of God
 KINGDOM_OF_GOD_ADJ코0=Papal
