--- a/en/modifers_l_english.properties
+++ b/en/modifers_l_english.properties
@@ -2141,7 +2141,7 @@ desc_pru_confederation_curtailed_modifier코0=We have ended the influence of the
 MODIFIER_POWER_PROJECTION_FROM_INSULTS코0=Power Projection from Insults
 MODIFIER_LOCAL_RELIGIOUS_UNITY_CONTRIBUTION코0=Local Religious Unity Contribution
 IDEA_MAY_CONVERT_TERRITORIES코0=May convert religion in territories.
-territory_core코0=Territory
+territory_core코1=Territorial Core
 territory_non_core코0=Territory
 territory코0=Territory
 mor_saharan_trade코0=Saharan Trade
