--- a/en/new_missions_l_english.properties
+++ b/en/new_missions_l_english.properties
@@ -1533,9 +1533,12 @@ miss_colonize_california코0=§Y[Root.GetName]§! or their subjects own at least
 gc_cas_spa_new_granada_title코0=New Kingdom of Granada
 gc_cas_spa_new_granada_desc코1=The territories of the southern Spanish Main must be organized into a coherent administrative entity, which we shall name the New Kingdom of Granada. A Royal Audiencia must be appointed to delegate legal authority over the colony from Bogotá.
 colombia_holy_order_tooltip코0=§Y5§! states owned by §Y[Root.GetName]§! or its subjects in §YColonial Colombia§! have an assigned Holy Order.
+colombia_holy_order_alternative_tooltip코0=§Y25§! provinces owned by §Y[Root.GetName]§! or its subjects in §YColonial Colombia§! are §Y[Root.Religion.GetName]§!
 mexico_holy_order_tooltip코0=§Y5§! states owned by §Y[Root.GetName]§! or its subjects in the §YMexico§! region have an assigned Holy Order.
+mexico_holy_order_alternative_tooltip코0=§Y25§! provinces owned by §Y[Root.GetName]§! or its subjects in the §YMexico§! region are §Y[Root.Religion.GetName]§!.
 cas_spice_islands_tooltip코0=§Y[Root.GetName]§! has discovered all provinces in the §YMoluccas§! region.
 native_reductions_tooltip코0=§Y15§! states owned by §Y[Root.GetName]§! or its subjects in §YNorth America§! and §YSouth America§! have an assigned Holy Order.
+native_reductions_alternative_tooltip코0=§Y75§! provinces owned by §Y[Root.GetName]§! or its subjects in §YNorth America§! and §YSouth America§! are §Y[Root.Religion.GetName]§!.
 gc_cas_spa_potosi_title코0=Potosi Silver
 gc_cas_spa_potosi_desc코0=We have discovered silver deposits at Cerro Rico that are rich beyond anything we have ever seen. To extract as much silver as possible, we must not only set the native population to work but also import thousands of African slaves. The value of this silver is estimated to be so great that it far outweighs the cost of buying new slaves, so we should not hesitate to work the slaves to death.
 gc_cas_spa_native_reductions_title코0=Native Reductions
@@ -1675,6 +1678,7 @@ por_bandeirantes_tooltip코0=§YIncreased chance of discovering Gold.§!
 gc_por_jesuits_title코0=Establish Jesuit Missions
 gc_por_jesuits_desc코0=We must not ignore the spiritual goals of our conquest of the New World; we are here not only for profit, but for the sake of enlightening the heathen peoples who call this land home. To that end we should invite Jesuit priests to establish missions in Brazil, educating the natives in the way of God so that they will abandon their savage customs.
 port_jesuits_tooltip코1=§Y7§! states in §YColonial Brazil§! owned by you or your non-tributary subjects have been assigned to the §YJesuit§! Holy Order.
+port_jesuits_alternative_tooltip코1=§Y20§! provinces in §YColonial Brazil§! owned by you or your non-tributary subjects are §Y[Root.Religion.GetName]§!.
 gc_por_wine_monopolies_title코0=Wine Monopolies
 gc_por_wine_monopolies_desc코0=The import and export of wine is tightly controlled in many Atlantic ports. We should do everything in our power to secure trade agreements that grant us monopolies on the wine trade in as many ports as possible.
 por_wine_tooltip코0=Own or have a subject own at least §Y10§! provinces producing §YWine§! with a §YWorkshop§! or §YCounting House§!.
