--- a/en/rights_of_man_l_english.properties
+++ b/en/rights_of_man_l_english.properties
@@ -1589,7 +1589,7 @@ alert_pick_church_aspect_instant코1=§Y$ASPECT_LONG$ Can Be Selected§!
 alert_pick_church_aspect_delayed코1=You have enough §YChurch Power§! to pick a new $ASPECT_LONG|Y$.
 CONTINUE_FAILED_TITLE코0=Continue failed!
 CONTINUE_FAILED_DESC코0=Continuing from the latest save failed. This could be for the following reasons:\n* The save is broken\n* The save requires DLC that isn't active\n* The save doesn't work with the current version of the game\n* The save is an Ironman save, and your game is modified, preventing achievements
-CULT_HELP_DESC코0=New Cults can be gained by bordering Fetishist nations with Cults adopted and interactions with nations of other religions.
+CULT_HELP_DESC코1=New Cults can be gained by bordering $RELIGION$ nations with Cults adopted and interactions with nations of other religions.
 ND_RANDOM_PERSONALITY코0=Random Personality
 ND_RANDOM_PERSONALITY_DESC코0=A random Personality will be chosen at game start.
 alert_can_intervene_in_war_instant코0=§YYou can intervene in wars between other Great Powers§!
