--- a/en/text_l_english.properties
+++ b/en/text_l_english.properties
@@ -4292,8 +4292,8 @@ PURE_REVOLT_RISK_LOWER_THAN코0=Base unrest lower than
 PURE_REVOLT_RISK_HIGHER_THAN코0=Base unrest at least 
 REVOLT_RISK_LOWER_THAN코0=Unrest lower than 
 REVOLT_RISK_HIGHER_THAN코0=Unrest at least 
-AVERAGE_EFFECTIVE_REVOLT_RISK_LOWER_THAN코1=Average Unrest above 0 lower than 
-AVERAGE_EFFECTIVE_REVOLT_RISK_HIGHER_THAN코1=Average Unrest above 0 at least 
+AVERAGE_EFFECTIVE_REVOLT_RISK_LOWER_THAN코2=Average Unrest in Provinces where there is Unrest is lower than 
+AVERAGE_EFFECTIVE_REVOLT_RISK_HIGHER_THAN코2=Average Unrest in Provinces where there is Unrest is at least 
 AVERAGE_REVOLT_RISK_LOWER_THAN코0=Average Unrest lower than 
 AVERAGE_REVOLT_RISK_HIGHER_THAN코0=Average Unrest at least 
 IS_NOT_PART_OF_HRE코0=Is NOT part of the HRE
@@ -7066,7 +7066,7 @@ PAPAL_INFLUENCE코0=Papal Influence
 PAPAL_INFLUENCE_NOT_ENOUGH코0=§R- You do not have enough papal influence.§!
 levy_church_tax코0=Levy Church Tax
 bless_monarch코0=Bless Ruler
-indulgence_for_sins코0=Grant Indulgence for Sins
+indulgence_for_sins코1=Sanction Dynasty
 local_saint코0=Beatify Local Saint
 PAPAL_INFLUENCE_NO_CARDINAL코0=§R- It is not possible to invest papal influence if you have no active cardinals.§!
 CARDINALLIST코0=$PROVINCE$, $COUNTRY$ with a chance of $SCORE$%.\n
@@ -7152,12 +7152,12 @@ ARMY_LABEL코0=Army Tradition:
 HRE_MAJORITY코0=Most HRE Members
 ICON_RELIGIOUS_UNITY코0=A demand for §YReligious Unity§W
 BORN_IN코0=Born in $COUNTRY$.
-HAD_COUNTRY_FLAG_LESS_THAN코0=Had country flag '§Y$FLAG$§W' for less than §Y$DAYS$§W days
-HAD_COUNTRY_FLAG_AT_LEAST코0=Had country flag '§Y$FLAG$§W' for at least §Y$DAYS$§W days
-HAD_GLOBAL_FLAG_LESS_THAN코0=Had global flag '§Y$FLAG$§W' for less than §Y$DAYS$§W days
-HAD_GLOBAL_FLAG_AT_LEAST코0=Had global flag '§Y$FLAG$§W' for at least §Y$DAYS$§W days
-HAD_PROVINCE_FLAG_LESS_THAN코0=Had province flag '§Y$FLAG$§W' for less than §Y$DAYS$§W days
-HAD_PROVINCE_FLAG_AT_LEAST코0=Had province flag '§Y$FLAG$§W' for at least §Y$DAYS$§W days
+HAD_COUNTRY_FLAG_LESS_THAN코1=Had country flag '§Y$FLAG$§W' for less than §Y$DAYS$§W days (Current: $CURRENT|Y$)
+HAD_COUNTRY_FLAG_AT_LEAST코1=Had country flag '§Y$FLAG$§W' for at least §Y$DAYS$§W days (Current: $CURRENT|Y$)
+HAD_GLOBAL_FLAG_LESS_THAN코1=Had global flag '§Y$FLAG$§W' for less than §Y$DAYS$§W days (Current: $CURRENT|Y$)
+HAD_GLOBAL_FLAG_AT_LEAST코1=Had global flag '§Y$FLAG$§W' for at least §Y$DAYS$§W days (Current: $CURRENT|Y$)
+HAD_PROVINCE_FLAG_LESS_THAN코1=Had province flag '§Y$FLAG$§W' for less than §Y$DAYS$§W days (Current: $CURRENT|Y$)
+HAD_PROVINCE_FLAG_AT_LEAST코1=Had province flag '§Y$FLAG$§W' for at least §Y$DAYS$§W days (Current: $CURRENT|Y$)
 NOCLAIMWENOTMONARCHY코0=Only monarchs may lay claim to thrones!
 NOCLAIMTHEYNOTMONARCHY코0=They are not a monarchy
 NOCLAIMNOTSAMEDYNASTY코0=We do not have the same ruling dynasty as them
