--- a/en/tmm_l_english.properties
+++ b/en/tmm_l_english.properties
@@ -141,7 +141,7 @@ TIER_2_DESCRIPTION코0=Significant
 TIER_3_DESCRIPTION코0=Magnificent
 MATCHING_TIER_DESCRIPTION코0=Your $TYPE$ is currently viewed as $TIERDESCRIPTION$. These are your current benefits:
 BETTER_TIER_DESCRIPTION코0=If you improve your $TYPE$ to $TIERDESCRIPTION$ level, you can benefit from:
-WORSE_TIER_DESCRIPTION코0=Your $TYPE$ has surpassed this level.
+WORSE_TIER_DESCRIPTION코1=$TIERDESCRIPTION$: Your $TYPE$ has surpassed this level.
 DOESNT_EXIST_TIER_DESCRIPTION코0=At $TIERDESCRIPTION$ level, the $TYPE$ would give these benefits:
 ON_UPGRADED_EVENT_DESC코0=§YWhen upgraded§!:\n$EFFECT$\n
 EXPENSEGREATPROJECTS코0=Great Projects
@@ -158,7 +158,7 @@ CANCEL_GREAT_PROJECT_MOVE코0=Cancel move.
 CANCEL_GREAT_PROJECT_MOVE_IN_SUBJECT코0=Removal of a $TYPE$ was canceled
 CANCEL_GREAT_PROJECT_MOVE_IN_SUBJECT_WHAT코0=to cease the relocation of a $TYPE$ in our country
 CANCEL_GREAT_PROJECT_MOVE_IN_SUBJECT_EFFECT코0=The work on removing a $BUILDING|Y$ from $PROVINCE$ has stopped.
-MOVE_GREAT_PROJECT코0=Starts the relocation of the $TYPE$ $NAME|Y$.
+MOVE_GREAT_PROJECT코1=Starts the relocation of the $TYPE$ $NAME|Y$ to $PROVINCE|Y$.
 CANCEL_GREAT_PROJECT_MOVE_PROGRESS코0=Are you sure you wish to stop $BUILDING$ from being moved from $FROMPROVINCE$ to $TOPROVINCE$? $PERCENTAGE_RETURNED|%1Y$ of the investment will be returned.
 CANNOT_MOVE_GREAT_PROJECT_NO_PATH코0=You do not have a clear route from $FROMPROVINCE|Y$ to $TOPROVINCE|Y$.
 CANNOT_BUILD_GREAT_PROJECT_WRONG_LOCATION코0=Cannot build this here.
@@ -186,7 +186,7 @@ FORT_MAINTENANCE_LOCK_OFF_ACTION코0=§GClick to never mothball forts§!
 FREE_MERCHANT코0=You have an unassigned merchant.
 FREE_MERCHANTS코0=You have $NUMBER$ unassigned merchants.
 FORT_MAIN_LOCKED코0=You cannot toggle fort maintenance when it is locked.
-CANNOT_DRAFT_WRONG_REFORMS코0=You cannot draft transport ships without the Plutocratic monarchy reform.
+CANNOT_DRAFT_WRONG_REFORMS코1=You cannot draft transport ships without the Eastern Plutocratic monarchy reform.
 CANNOT_DRAFT_NO_AVAILABLE_UNITS코0=You can only draft units up to $PERCENTAGE$% of your force limit ($MAXUNITS$ units). You currently have $CURRENTUNITS$ units.
 CANNOT_DRAFT_UNIT_TYPE코0=You cannot draft $TYPE$ units.
 mechanic_allow_draft_transport_ships_yes코0=Allows cheap drafting of transport ships.
@@ -275,7 +275,7 @@ capital_state_pillaged_by_rival코0=$TARGET$ pillaged our capital
 PEACE_PILLAGE_CAPITAL_STATE_DESC코0=$TAKER$ pillages $GIVER$ capital state
 PILLAGE_CAPITAL_CANNOT_DONT_OCCUPY코0=$CAPITAL|Y$ is not occupied by $TAKER|Y$ or one of its subjects.
 PILLAGE_CAPITAL_CANNOT_NO_VALID_PROVINCES코0=All provinces in the capital area have been taken.
-NUM_OF_TIMES_PILLAGED_CAPITAL_STATE코0=Number of times pillaged a capital state
+NUM_OF_TIMES_PILLAGED_CAPITAL_STATE코1=Number of times used 'Pillage capital state' in a peace treaty
 NUM_OF_TIMES_CONCENTRATED_DEVELOPMENT코0=Number of times concentrated development
 COUNTRY_HAS_PILLAGED_CAPITAL_STATE_OF코0=$SCOPECOUNTRY|Y$ has pillaged the capital state of $OTHERCOUNTRY$.\n
 COUNTRY_HAS_NOT_PILLAGED_CAPITAL_STATE_OF코0=$SCOPECOUNTRY|Y$ has not pillaged the capital state of $OTHERCOUNTRY$.\n
@@ -502,8 +502,8 @@ REDUCED_OPINION_FAVOR_DECLINED_LOG코0=$RECIPIENT$ refused our request.
 REDUCED_OPINION_FAVOR_DECLINED_BTN1코0=Too bad
 REDUCED_OPINION_FAVOR_DECLINED_BTN2코0=Too bad
 REDUCED_OPINION_FAVOR_DECLINED_BTN3코0=Go to
-REDUCE_OPINION_CANNOT_COST코0=§RYou need at least §Y$COST$§! Favors with §Y$COUNTRY$§! to ask them to return $PROVINCE$.§!
-REDUCE_OPINION_CANNOT_OPINION코0=§RYou need at least §Y$OPINION$§! Opinion with §Y$COUNTRY$§! to ask them to return a core province.§!
+REDUCE_OPINION_CANNOT_COST코1=§RYou need at least §Y$COST$§! Favors with §Y$COUNTRY$§! to ask them to reduce their opinion of another Country.§!
+REDUCE_OPINION_CANNOT_OPINION코1=§RYou need at least §Y$OPINION$§! Opinion with §Y$COUNTRY$§! to ask them to reduce their opinion of another Country.§!
 REDUCE_OPINION_FAVOR_DESC2코0=Spend $FAVOR|Y$ Favors to get them to reduce their opinion of another Country.
 REDUCE_OPINION_REQDESC코0=$ACTOR$ is asking us to lower our opinion of $WHOM$ in exchange for favors. Do you accept?
 REDUCE_OPINIONTITLE코0=Reduce Opinion
@@ -727,7 +727,7 @@ TRADE_FAVORS_FOR_HEIR_CANNOT_ALREADY_HAVE_ONE코0=§Y$COUNTRY$§! already have a
 TRADE_FAVORS_FOR_HEIR_CANNOT_COST코0=You need at least §Y$COST$§! Favors with §Y$COUNTRY$§! to ask them to install our dynasty member as their heir.
 TRADE_FAVORS_FOR_HEIR_CANNOT_OPINION코0=You need at least §Y$OPINION$§! Opinion with §Y$COUNTRY$§! to install our dynasty member as their heir.
 TRADE_FAVORS_FOR_HEIR_DESC2코0=Spend $FAVOR|Y$ Favors in exchange for installing a member of our dynasty as their heir.
-TRADE_FAVORS_FOR_HEIR_DESC코0=We will ask $RECIPIENT|Y$ to install a member of our ruling dynasty as their heir in exchange for $FAVORS|Y$ Favors.
+TRADE_FAVORS_FOR_HEIR_DESC코1=We will ask $RECIPIENT|Y$ to install a member of our ruling dynasty as their heir in exchange for $FAVORS|Y$ Favors. This will create a truce between the countries and cause $AE|R$ Aggressive Expansion in countries of the same religion.
 X_IS_SUBJECT_OF_Y코0=$COUNTRY|Y$ is a subject of $OVERLORD|Y$.
 DIPLOMACYACTION_CATEGORY_favors코0=Favors
 WE_TRADE_FAVORS_FOR_TRUST_TITLE코0=Trade Favors For Trust
@@ -933,3 +933,100 @@ SECEDE_PROV_REDUCE_OPINION_AND_TRUST코0=$ACTUALGIVER|Y$ will change their opini
 HAS_OR_BUILDING_FLAGSHIP코0=Country has or is building a Flagship
 HAS_NOT_OR_BUILDING_FLAGSHIP코0=Country does not have a Flagship and is not building one
 GREAT_PROJECT_CANNOT_BE_MOVED코0=$GREATPROJECT|Y$ cannot be moved, it is too large.
+CLAIM_STRENGTH_TOOLTIP코0=$NAME|Y$ has a claim strength of $VAL|Y$. This will become his Legitimacy when he ascends to the throne.
+CLAIM_STRENGTH_INCREASE_TOOLTIP코0=Claim strength increases by $AMOUNT|Y$ per month.
+MOVE_GREAT_PROJECT_EXPLANATION코0=It will cost $CASH|Y$¤ to move $GREATPROJECT|Y$ to your capital. This is based on a distance of $DIST$ and an estimate of $DAYS$ days to move each unit of distance, multiplied by a cost of $COSTPERDAY$¤ per day to move it.
+TRADE_FAVORS_FOR_HEIR_CANNOT_DYNASTY_LOCKED코0=§Y$COUNTRY$§! cannot have an heir from a different Dynasty.
+TRADE_FAVORS_FOR_HEIR_CANNOT_STATES_GENERAL코0=§Y$COUNTRY$§! cannot have an heir with $LEFT$ vs $RIGHT$ Mechanics.
+CANNOT_EXTEND_REGENCY_NO_HEIR코0=You cannot extend a Regency when there is no heir, the Regency will automatically end when appropriate.
+COHESION_NO_NEIGHBOURING_COLONIZER코0=No colonizers neighbouring federation: $VALUE|+=1$\n
+COHESION_FEDERATION_NO_MEMBER_STRONGER코0=No member is stronger than Federation Leader: $VALUE|+=1$\n
+COHESION_DESC코0=Federal Cohesion is increased by having members of the same Culture or Cultural Group as the leader, and by having more advanced colonizing neighbours. It is reduced by having nations stronger than the leader and by each advancement made.
+pillaged_a_state_for_us코0=Pillaged a state for us
+PAL_REVOLUTIONARY_NAME코0=The Revolutionary Palatinate
+PAL_REVOLUTIONARY_SHORT_NAME코0=The Rev. Palatinate
+PAP_REVOLUTIONARY_NAME코0=The Revolutionary Papal State
+PAP_REVOLUTIONARY_SHORT_NAME코0=The Rev. Papal State
+KNI_REVOLUTIONARY_NAME코0=The Revolutionary Knights
+KNI_REVOLUTIONARY_SHORT_NAME코0=The Rev. Knights
+LOI_REVOLUTIONARY_NAME코0=The Revolutionary Isles
+LOI_REVOLUTIONARY_SHORT_NAME코0=The Rev. Isles
+colonial_core코0=Colonial Core
+RECOMMENDED_DLCS코0=Recommended DLCs
+RECOMMENDED_COUNTRIES코0=Recommended Countries
+DLC_FEATURES코0=Features
+DLC_DESCRIPTION코0=Description
+CANNOT_MOVE_GREAT_PROJECT_TOO_BIG코0=The $GREATPROJECT$ is too big to move.
+NO_REBELS_TO_SUPPORT코0=There are no rebels in this country that are ready to receive our support.
+AGGRESSIVE_EXPANSION_PRIMITIVES코0=Primitives
+LEAVE_FEDERATION_DESC코0=Leave the Federation.
+INVITE_TO_JOIN_FEDERATION_DESC코0=Invite to join the Federation.
+KICK_FROM_FEDERATION_DESC코0=Kick out of the Federation.
+REQUEST_JOIN_ALREADY_LEADER코0=$WHO|Y$ is already the leader of a Federation.
+ENEMY_INVASION_IMMINENT_NEAR코0=$UNIT|Y$ near $PLACE|Y$
+FEDERATION_DESIRABILITY_ALREADY_LEADER_OF_DIFFERENT_FEDERATION코0=$WHO|Y$ is already leader of $FEDERATION|Y$.
+FEDERATION_DESIRABILITY_STRONGER_THAN_LEADER코0=$WHO|Y$ is stronger than the Federation leader $LEADER|Y$.
+FEDERATION_DESIRABILITY_DESIRE_TO_STAY_PUT코0=Desire to stay in $FEDNAME$: 
+LOSE_HEGEMON_STATUS코0=$WHO|Y$ will lose their Hegemon status.
+ANCESTOR_LEVEL_MOD코0=Ancestor $NAME$ is $PERSONALITY$
+ANCESTOR_LEVEL_BONUS코0=Ancestor $NAME$ level bonus
+FEDERATION_DESIRABILITY_DONT_WANT_TO_CHANGE코0=All that paperwork of changing Federation: 
+NO_TRADE_COMPANIES코0=No Trade Companies
+CURRENT_GURU코0=Current Guru
+NEXT_GURU코0=Next Guru
+CURRENT_GURU_DESC코0=Your country currently gets the following benefits from $NAME$:\n\n$EFFECTS$
+NEXT_GURU_DESC코0=When the current Guru retires, $NAME$ will step up to replace him.
+PICK_TEACHING_DESC코0=Add a teaching to permanently affect your country at a cost of some Monarch points.
+IF_CONDITIONS_MET코0=If the following conditions are met:
+THEN_THIS코0=...then these effects will happen:
+FEDERATION_COOLDOWN코0=$COUNTRY$ can only join a Federation once every $YEARS|Y$ years.\nThey will be able to do it again in $UNTIL|Y$.
+FEDERATION_LEADER_OPINION코0=Negative opinion of Federation Leader: 
+COHESION_FEDERATION_MEMBER_STRONGER_WRONG_CULTURE코0=$NAME|Y$ is stronger than Federation Leader and of a different Culture: $VALUE|+=1$\n
+COHESION_FEDERATION_SAME_CULTURE_MEMBERS_BONUS코0=Bonus for $NUM$ members of the same Culture as the Leader: $VAL$\n
+IS_ALREADY_ANCESTOR_PERSONALITY코0=We already revere an Ancestor with $PERSONALITY|Y$ attributes.
+COLONY_CHANGES코0=Colony changes
+GOODS_CHANGE_RANDOM코0=New Trade Goods will now be produced in $WHERE|Y$.\n
+COUNTRY_MISSION_OTHER코0=This mission is only available to $COUNTRY$.
+CULTURE_ALREADY_SELECTED코0=$CULTURE|Y$ is already selected
+SELECT_CULTURE_DESIGNER코0=Select $CULTURE|Y$ as your Primary Culture
+CANNOT_CONCENTRATE_DEVELOPMENT_WRONG_SUBJECT_TYPE코0=$SUBJECTTYPE|Y$ subjects cannot have their development concentrated
+SELECT_EDICT_FOR_PROVINCE코0=Select Edict for $PROVINCE$:
+IF_COLONY_SIZE_IS_X코0=If the colony has at least $SIZE|Y$ Provinces:
+active_religious_turmoil코0=Religious Turmoil
+CONTINUE_BUTTON_STATS코0=Return to Game
+CONDOTTIERI_OFFER_ALLIANCE코0=§R- You cannot rent out Condottieri to a nation that is at war with a nation that you have an Alliance with.§!
+HAVE_CONDOTTIERI_WITH코0=You cannot make an Alliance with a nation that you have Condottieri fighting.
+CANNOT_BUILD_SUPPLY_DEPOT_AT_SEA코0=It would be crazy to drop a supply depot in the sea.
+CANNOT_AFFORD_GURU_COST코0=You cannot afford the $POW|Y$ $TYPE$ power needed for this Teaching.
+CANNOT_PICK_TEACHING_NEW_GURU코0=You cannot select more than one teaching from each Guru.
+GURU_APPOINTED코0=$GURU|Y$ is made Guru.
+NEW_GURU_SETUP코0=When a new Guru is appointed.
+NEW_GURU_HEADER코0=$MESSENGER$
+NEW_GURU_1코0=New Guru
+NEW_GURU_2코0=$GURU|Y$ has been appointed the new Guru.
+NEW_GURU_3코0=They bring the following effects:
+NEW_GURU_4코0=$EFFECTS$.
+NEW_GURU_LOG코0=New Guru appointed.
+NEW_GURU_BTN1코0=OK
+NEW_GURU_BTN2코0=OK
+NEW_GURU_BTN3코0=OK
+NO_GURU_SETUP코0=When no Guru is available.
+NO_GURU_HEADER코0=$MESSENGER$
+NO_GURU_1코0=No Guru
+NO_GURU_2코0=Our Religion is lacking a Guru.
+NO_GURU_LOG코0=No Guru appointed.
+NO_GURU_BTN1코0=OK
+NO_GURU_BTN2코0=OK
+NO_GURU_BTN3코0=OK
+EXTEND_REGENCY_IMPERIAL_AUTHORITY_HIT코0=Since you are the Emperor, you will also suffer a reduction in Imperial Authority of $IAHIT|Y$.
+ABDICATE_PERFORM_IRO2_NEITHER코0=There will be a hit of $PRESTIGE_HIT|R$ prestige from this action.
+BREAK_ALLIANCE_COOLDOWN코0=We can only ask an ally to break an Alliance once every $YEARS|Y$ years.\nThey will be able to do it again in $UNTIL|Y$.
+TRADE_FAVORS_FOR_GOLD_COOLDOWN코0=$COUNTRY$ can only ask an ally to trade Favors for gold once every $YEARS|Y$ years.\nThey will be able to do it again in $UNTIL|Y$.
+TRADE_FAVORS_FOR_MANPOWER_COOLDOWN코0=$COUNTRY$ can only ask an ally to trade Favors for Manpower once every $YEARS|Y$ years.\nThey will be able to do it again in $UNTIL|Y$.
+TRADE_FAVORS_FOR_SAILORS_COOLDOWN코0=$COUNTRY$ can only ask an ally to trade Favors for Sailors once every $YEARS|Y$ years.\nThey will be able to do it again in $UNTIL|Y$.
+REDUCE_RELATIONS_COOLDOWN코0=$COUNTRY$ can only ask an ally to reduce relations with another country once every $YEARS|Y$ years.\nThey will be able to do it again in $UNTIL|Y$.
+DIPLO_SAILORS코0=$WHO$ Sailors: 
+DIPLO_LOW_SAILORS코0=$WHO$ has low Sailors: 
+DIPLO_RELATIVE_OPINION코0=$WHO$ relative opinion of $COUNTRY01$ and $COUNTRY02$: 
+ENFORCE_PEACE_CANNOT_LEAGUE_WAR코0=You cannot enforce peace in a Religious League War.
+CANNOT_MOVE_ALREADY_IN_PROGRESS:=The $GREATPROJECT|Y$ is already being moved to $PROVINCE|Y$
