--- a/en/dharma_l_english.properties
+++ b/en/dharma_l_english.properties
@@ -438,7 +438,7 @@ REFORM_LEVEL_LOCKED_DESC코1=You cannot select any of these.
 REFORM_LEVEL_NEEDS_PREVIOUS_DESC코0=You need to enact the previous tiers before selecting any of these.
 CURRENT_REFORM_PROGRESS코0=You have $POINTS$ of reform progress: you need $REQPOINTS|Y$ to enact the next reform.
 NEXT_REFORM_EXPECTED코0=We expect to reach this $WHEN|Y$.
-REFORM_PROGRESS_DEV코4=\n $POINTS|G$ from an average local autonomy of §Y$LOCALAUTONOMY$%§!\nThe formula for calculating this is $BASE|+=0$ per year divided by (12 * (100-§Y$LOCALAUTONOMY$%§!)).\n
+REFORM_PROGRESS_DEV코5=\n $POINTS|G$ from an average local autonomy of §Y$LOCALAUTONOMY$%§!\nThe formula for calculating this is $BASE|+=0$ per year divided by (12 * (100+§Y$LOCALAUTONOMY$%§!)).\n
 REFORM_PROGRESS_BUILDINGS코1=\n $POINTS|G$ from Buildings
 REFORM_PROGRESS_MODIFIER_DESC코3=You gain $POINTS|Y$ every month due to:$FROM_AUTONOMY$$FROM_BUILDINGS$$FROM_MONTHLY$\n
 REFORM_INCREASED_COST코1=Each tier of Reforms will increase the cost by §Y50§!
