--- a/en/diplo_reasons_l_english.properties
+++ b/en/diplo_reasons_l_english.properties
@@ -162,7 +162,7 @@ DIPLO_NO_ENEMIES코0=No valid enemy:
 DIPLO_IS_CONSOLIDATING코0=Have plans on their own: 
 DIPLO_HAS_TRUCE_WITH코0=$WHO1$ has a truce with $WHO2$: 
 DIPLO_FEAR_OF_BEING_ANNEXED코0=Is being annexed: 
-DIPLO_RESTRICTED_REGION코0=Tradecharter Regional Scepticism
+DIPLO_RESTRICTED_REGION코0=Tradecharter Regional Scepticism: 
 DIPLO_TRADING_CITY코0=Is Trading City: 
 DIPLO_SELL_PROVINCE_FREE_CITY코0=Would lose §YFree City§! status: 
 DIPLO_SELL_PROVINCE_TRADE_LEAGUE코0=Would have to leave a §YTrade League§!: 
