--- a/en/emperor_content_l_english.properties
+++ b/en/emperor_content_l_english.properties
@@ -1504,7 +1504,7 @@ flavor_kor.12.tt코0=Complete the mission "§YThe Plight of the Peasantry§!" be
 #Industrialization Institution and other Institutions work
 tooltip_global_trade_embraced_other_continent코0=Not Trade Company & Owner has embraced §YGlobal Trade§! - overseas province
 tooltip_manufactories_embraced_other_continent코0=Not Trade Company & Owner has embraced §YManufactories§! - overseas province
-tooltip_any_neighbor_with_worse_tech_has_embraced_enlightenment코0=Capital & Neighbor with lower Tech has embraced §YEnlightenment§
+tooltip_any_neighbor_with_worse_tech_has_embraced_enlightenment코0=Capital & Neighbor with lower Tech has embraced §YEnlightenment§!
 tooltip_enlightenment_embraced_other_continent코0=Not Trade Company & Owner has embraced §YEnlightenment§! - overseas province
 
 industrialization코0=Industrialization
