--- a/en/emperor_estates_l_english.properties
+++ b/en/emperor_estates_l_english.properties
@@ -49,7 +49,7 @@ estate_brahmins_legitimacy_to_rule코0=Brahmin Legitimacy to Rule
 estate_brahmins_brahmin_leadership코0=Brahmin Leadership
 estate_brahmins_flexible_deities코0=Choice of Personal Deities
 estate_brahmins_flexible_deities_effect_tooltip코1=Enables a decision that allows you to change your Personal Deity every §Y20§! years at the cost of §Y25§! legitimacy.
-brahmin_hindu_deity_decision_title코0=Choose Personal Deity
+brahmin_hindu_deity_decision_title코0=Choose Personal Deity Again
 brahmin_hindu_deity_decision_desc코0=Sometimes, one regrets one's choices. Why should one's choice as a young man of which deity to follow apply for the rest of one's life? Fortunately, our arrangements with the Brahmins allow us some flexibility on the matter.
 decision_once_every_ten_years코0=This decision can only be taken once every §Y10§! years.
 estate_brahmins_loyalty_privilege코0=Brahmin Council
@@ -158,7 +158,7 @@ ESTATES_SEIZE_LAND_DESC코0=Will seize §Y5% Estate Land§! for the §YCrown§!.
 ESTATES_SEIZE_LAND_UNREST_DESC코0=Estate share of development will receive §R+5§! §YUnrest§! and the most influential Estate will foolishly take up arms against you.
 IS_NOT_MOST_POWERFUL_ESTATE코0=$ESTATE$ is not the most powerful estate.
 IS_MOST_POWERFUL_ESTATE코0=$ESTATE$ is the most powerful estate.
-ESTATE_LAND_SHARE_CHANGE_ENTRY코0=  $ESTATE$: $CHANGE|2Y=%$\n
+ESTATE_LAND_SHARE_CHANGE_ENTRY코0=  $ESTATE$: $CHANGE|2Y=&$\n
 APPLY_SPRITE_PACK_EFFECT코0=§Y[GetName]§! will use $SPRITE_PACK|Y$.
 crown_land_level_0코0=Crown Land Ownership
 crown_land_level_1코0=Crown Land Ownership
