--- a/en/government_l_english.properties
+++ b/en/government_l_english.properties
@@ -11,7 +11,7 @@ feudalism_reform코1=Feudal Nobility
 feudalism_reform_desc코0=In a Feudal kingdom the power of the Monarch is enhanced by a land owning aristocracy sworn to obey them. The aristocrats, or nobles, are often landowners in their own right, with considerable influence and vassals of their own.
 autocracy_reform코0=Autocracy
 autocracy_reform_desc코0=Autocratic monarchies concentrate power in the hands of the ruler. The state is often seen as their personal property. It is not uncommon for rulers to have ministers and supporters, but these are then referred to as members of the royal household.
-plutocratic_reform코0=Plutocracy
+plutocratic_reform코0=Eastern Plutocracy
 plutocratic_reform_desc코0=A plutocratic kingdom is one where the supporters of the Monarch are those with the largest incomes. The monarch is often the head of a successful merchant enterprise, and so are many of their supporters.
 enforce_trader_privileges_reform코0=Enforce Trader Privileges
 enforce_trader_privileges_reform_desc코0=By strengthening the ties between the state and successful merchant enterprises, we can increase our reach out into the world as well as the profit we bring home.
