--- a/en/leviathan_l_english.properties
+++ b/en/leviathan_l_english.properties
@@ -502,7 +502,7 @@ dreamtime_rainbow_serpent_desc코0=Dreaming Stories across Australia vary wildly
 ancestor_story코0=The Ancestors
 ancestor_story_desc코0=We were carried here on the backs of our Ancestors, and the holiest among all Ancestors may ascend into the Dreaming and remain with us on the spiritual plane.
 erathipa_story코0=Erathipa
-erathipa_story_desc코0=Erathipa is a Dreaming figure who takes the form of a bolder in the shape of a pregnant woman. Erathipa keeps the souls of deceased children in her womb, and any woman who approaches Erathipa will be blessed with fertility.
+erathipa_story_desc코1=Erathipa is a Dreaming figure who takes the form of a boulder in the shape of a pregnant woman. Erathipa keeps the souls of deceased children in her womb, and any woman who approaches Erathipa will be blessed with fertility.
 crow_story코0=Crow
 crow_story_desc코0=The Crow is a champion of Humanity in the Dreaming who appears in Stories all across Australia. It is to Crow that we can give thanks for Humanity's discovery of fire, and his children here on Earth are to be venerated as holy creatures.
 moinee_story코0=Moinee
@@ -568,7 +568,7 @@ EXPAND_INFRASTRUCTURE_TOOLTIP코0=§YExpand Infrastructure§!
 EXPAND_INFRASTRUCTURE_TOOLTIP_MODIFIER코0=Expanding the infrastructure will apply this to the province:\n$MODIFIER$\n
 CEDE_PROVINCE_DEMAND_TRIBAL코0= Tribal Land
 cb_native_american_tribal_feud코0=Tribal Border Feud
-
+PUSH_BACK_COLONIZERS코0=$ORDER$$FIRST$-$SECOND$ war against the invaders
 NATIVE_TRIBE_MIGRATORY_DEVELOPMENT_HEADER_TOOLTIP코0=§YTribal Development§!\nEach month we gain tribal development from grazing lands below §Y100%§! devastation. We gain additional tribal development from grazing on land in tribal land belonging to another nation.
 NATIVE_TRIBE_SETTLED_DEVELOPMENT_HEADER_TOOLTIP코0=§YTribal Development§!\nEach month the development of our tribe in the capital grows thanks to the buildings in our various settlements.
 TAKE_NATIVE_AMERICAN_LAND_WAR_NAME코0=$ORDER$$FIRST$-$SECOND$ border feud
@@ -697,8 +697,8 @@ PROV4938코0=Vanua Levu
 PROV_ADJ4938코0=Vanua Levu
 PROV4939코0=Te Moana-a-Toi
 PROV_ADJ4939코0=Te Moana-a-Toi
-MAA코0=Mataatua
-MAA_ADJ코0=Mataatuan
+MAA코0=Ngati Awa
+MAA_ADJ코0=Ngati Awan
 TAN코0=Tainui
 TAN_ADJ코0=Tainuian
 TAK코0=Takitimu
@@ -707,8 +707,8 @@ TNK코0=Taranaki
 TNK_ADJ코0=Taranakian
 TEA코0=Te Arawa
 TEA_ADJ코0=Arawan
-TTT코0=Te Tai Tokerau
-TTT_ADJ코0=Tokerauan
+TTT코0=Ngapuhi
+TTT_ADJ코0=Ngapuhian
 WAI코0=Waitaha
 WAI_ADJ코0=Waitahan
 AOT코0=Aotearoa
@@ -769,8 +769,8 @@ maori_ideas_start코0=Iwi System
 maori_ideas_bonus코0=Maori Ambition
 sons_of_kupe코0=Sons of Kupe
 sons_of_kupe_desc코1=Estimated to have occurred sometime in the 11th century, Kupe's Voyage is a legendary story shared by all Maori. It tells of a hero from Hawaiki who set off on a voyage with his wife Kuramarotini in her great canoe, Matawhourua. On their legendary voyage they encountered countless sea monsters, demons, and harsh weathers before discovering the incredible land of Aotearoa. Upon returning to Hawaiki, he told his people of the incredible things he saw, and that a new life waited for them on these distant shores. It is from these enraptured listeners that we are descended, and the voyager spirit is something that exists at the very heart of our people.
-kaikiakitanga코0=Kaikiakitanga
-kaikiakitanga_desc코1=Kaikiatitanga is the sacred guardianship that all Maori owe to the sky, the sea, and the land. One who practices this tradition is Kaikiaki or guardian and is a sacred guardian who defends the inanimate forces of Mana that surround us but are incapable of defending themselves. To desecrate a holy site is considered equivalent to murder in Maori society, so harmful acts such as polluting a river, chopping down a forest, or excessively plundering natural resources are considered sin without measure. It is only by living in harmony with our environment and restricting ourselves on how much we encroach on nature is the only way to please the Gods and grow rich with Mana.
+kaitiakitanga코0=kaitiakitanga
+kaitiakitanga_desc코1=Kaikiatitanga is the sacred guardianship that all Maori owe to the sky, the sea, and the land. One who practices this tradition is kaitiaki or guardian and is a sacred guardian who defends the inanimate forces of Mana that surround us but are incapable of defending themselves. To desecrate a holy site is considered equivalent to murder in Maori society, so harmful acts such as polluting a river, chopping down a forest, or excessively plundering natural resources are considered sin without measure. It is only by living in harmony with our environment and restricting ourselves on how much we encroach on nature is the only way to please the Gods and grow rich with Mana.
 kaumatua코0=Kaumatua
 kaumatua_desc코1=Although we are not ruled by the elder council, they are highly influential in our society. A Kaumatua is elected by their family for their supreme intellect, wisdom, and renown to ensure that the family and Iwi as a whole continues to maintain the sacred traditions valued to the Maori. Kaumatua holds the soul of an immortal demi-god who possesses the power of reincarnation, and have existed across countless lifetimes, and may return at any moment to give the family guidance.
 kapa_haka코0=Kapa Haka
@@ -849,15 +849,15 @@ samoa_faavae코0=Fa'avae I Le Atua Samoa
 samoa_faavae_desc코0=The religious practices of our people vary wildly in doctrine and denomination, but all are bound by the phrase “Samoa is founded on God”. It matters not what religion we practice, for it is Samoa itself which is holy among all gods. Sunday is a day of great rest for all Samoans, to worship their respective gods in the way they choose and spend time amongst their family. It matters not what faith you follow, for all are accepted in Fa'a Samoa.
 samoa_trade코0=Polynesian Triangle Trade
 samoa_trade_desc코0=For years, Samoan traders have been involved in trading across the Polynesian Triangle; primarily with Fiji and Tonga, our close neighbours. Many societies would merely abandon the notion of trade across such a vast ocean, but our voyagers and traders understand the way of the waves better than any others. No matter the size of our nation, we shall remember the navigational techniques that brought riches to Samoa, and perhaps someday Samoa will reap the rich trade goods from all over the world…
-estate_kahuna코0=Kahunas
-estate_tohunga코0=Tohungas
-estate_bete코0=Betes
-estate_taula_otua코0=Taula 'Otuas
-estate_taula_aitu코0=Taula Aitus
-estate_alii코0=Ali-is
-estate_ariki코0=Arikis
-estate_eiki코0='Eikis
-estate_ratu코0=Ratus
+estate_kahuna코0=Kahuna
+estate_tohunga코0=Tohunga
+estate_bete코0=Bete
+estate_taula_otua코0=Taula 'Otua
+estate_taula_aitu코0=Taula Aitu
+estate_alii코0=Ali-i
+estate_rangatira코0=Rangatira
+estate_eiki코0='Eiki
+estate_ratu코0=Ratu
 iroquoian_federation_ideas코0=Iroquoian Federation Ideas
 iroquoian_federation_ideas_start코0=Iroquoian Traditions
 iroquoian_federation_ideas_bonus코0=Iroquoian Ambitions
@@ -968,7 +968,7 @@ unite_fiji_title코0=Unite Fiji
 unite_fiji_desc코0=The clans are one once more and we can claim the title of ruler of Fiji.
 polynesian_navy_build_title코0=Oceanic People
 polynesian_navy_build_desc코0=No matter what the Polynesian people call home, one thing they all have in common is a spiritual connection with the sea. Sailing is often seen as a sacred tradition, and in some societies the sailor's canoe is seen as an extension of his own body, and in even more extreme cases the canoe is seen to have Mana or a soul of its own and is sovereign and sacred among all things.
-polynesian_grand_navy_title코0=The Polynesian Triangle
+polynesian_grand_navy_title코0=Polynesian Triangle
 polynesian_grand_navy_desc코0=The Polynesian Triangle refers to the area of the Pacific Ocean inhabited by the Polynesians. The tips of the triangle refers to Hawaii, the west corner to Aotearoa, and the east corner to Rapa Nui. Polynesian traders and voyagers alike would utilize the Polynesian Triangle to engage in trade, exploration, and colonisation. The native Polynesians would actually refer to this region as an octopus, representing the various invisible pathways that navigators would follow along the sea. This octopus has various names in Polynesian societies including Taumata-Fe'e-Fa'atupu-Hau or Grand Octopus of Prosperity referring to the great riches that exploration and trade would bring to their society.
 gain_mana_title코0=Gain Mana
 gain_mana_desc코0=Mana is roughly equivalent to the Western expression of a soul or spirit. But, Mana is also the measure of a man's prestige and piety, and an honourable man is seen as possessing a lot of Mana while a lesser member of society is seen as being shallow in Mana. In some societies, someone who is dedicated to prayer and the accumulation of Mana can gain the favour of the gods and request them to perform tasks such as changing the weather or bringing islands out of the ocean. It's from this that the west's mistake of equating Mana with Magic has come from.
@@ -1535,8 +1535,12 @@ monument_events.2.t코0=A Helping Hand
 monument_events.2.d코0=One of our most famous and respected masons has approached [Root.Monarch.GetName] this morning, stating his concerns about the state of the monument in [monument_province_2.GetName]. "My dear [Root.Monarch.GetTitle], it breaks my heart to see such a beautiful structure carelessly abandoned, left to face alone the dangers of time and weather. I beg of you, please allow me to help restore it."
 monument_events.2.a코0=We should hire him immediately.
 monument_events.2.b코0=We do not have time for this.
+monumental_pride코0=Monumental Pride
+desc_monumental_pride코0=The construction of one of our nation's greatest monuments fills the hearts of our people with pride to be part of our realm!
 monument_boost코0=Monument Improvements
 desc_monument_boost코0=Hiring the best masons in our nation has helped to optimize the construction of our monuments.
+monument_church_of_the_people코0=Church of the People
+desc_monument_church_of_the_people코0=From the lowly peasant to the highest of the clerics, everyone of our [Root.Government.GetName] is welcome in Saint Peter's Basilica.
 monument_events.3.t코0=The House of the Lord
 monument_events.3.d코0=God has eyes everywhere, but His overwhelming presence must find a place to rest. Saint Peter's Basilica has finished its construction and the house of the Lord is now ready to offer such an appropriate resting place. From there, [Root.Monarch.GetTitle] [Root.Monarch.GetName] is able to oversee everything as he was part of God's eyes. The most respected members of the Church have advised us to hold a big mass in order to celebrate and honor this moment of joy.
 monument_events.3.a코0=We should invite our allies!
