--- a/en/rule_britannia_l_english.properties
+++ b/en/rule_britannia_l_english.properties
@@ -444,7 +444,7 @@ SHARE_OF_STARTING_INCOME_MORE코0=Income of at least §Y$TARGET$§!¤. (Currentl
 INNOVATIVENESS_AMOUNT코0=We currently have achieved $AMOUNT|Y$ innovativeness.
 INNOVATIVENESS_CHANGE_DESC코0=Our innovativeness is being modified by the following:\n
 INNOVATIVENESS_FULL_MOD_DESC코0=\nEffect of Innovativeness at §Y100§!:\n$MOD$
-INNOVATIVENESS_DESC코1=Innovativeness can be increased by:\nFirst in Technology: §G+2§!\nFirst in Idea: §G+1§!\nAhead of Time: §G+0.005§!/month\n\nInnovativeness can be decreased by:\nBehind Neighbors: §R-0.03§!/month\n
+INNOVATIVENESS_DESC코2=Innovativeness can be increased by:\nFirst in Technology: $FIRSTINTECH|G$\nFirst in Idea: $FIRSTINIDEA|G$\nAhead of Time: $AHEADOFTIME|G$/month\n\nInnovativeness can be decreased by:\nBehind Neighbors: $BEHINDNEIGHBOURS|R$/month\n
 INNOVATIVENESS_MOD_DESC코0=\nEffect of our current Innovativeness:\n$MOD$
 TECH_INNOVATIVENESS_DATE코0=\nThe technology level $TECH|Y$ was reached first at $DATE|Y$.
 TECH_INNOVATIVENESS_DAYS_LEFT코0= It's available for $DAYS|Y$ more days.
