--- a/en/leviathan_l_english.properties
+++ b/en/leviathan_l_english.properties
@@ -695,24 +695,24 @@ PROV4937코0=Lau
 PROV_ADJ4937코0=Lau
 PROV4938코0=Vanua Levu
 PROV_ADJ4938코0=Vanua Levu
-PROV4939코0=Te Moana-a-Toi
-PROV_ADJ4939코0=Te Moana-a-Toi
+PROV4939코1=Te Urewera
+PROV_ADJ4939코1=Te Urewera
 MAA코0=Ngati Awa
-MAA_ADJ코0=Ngati Awan
+MAA_ADJ코1=Ngati Awa
 TAN코0=Tainui
-TAN_ADJ코0=Tainuian
-TAK코0=Takitimu
-TAK_ADJ코0=Takitimuan
-TNK코0=Taranaki
-TNK_ADJ코0=Taranakian
-TEA코0=Te Arawa
-TEA_ADJ코0=Arawan
+TAN_ADJ코1=Tainui
+TAK코1=Ngati Kahungunu
+TAK_ADJ코1=Ngati Kahungunu
+TNK코1=Ngati Toa
+TNK_ADJ코1=Ngati Toa
+TEA코1=Ngati Ranginui
+TEA_ADJ코1=Ngati Ranginui
 TTT코0=Ngapuhi
-TTT_ADJ코0=Ngapuhian
+TTT_ADJ코1=Ngapuhi
 WAI코0=Waitaha
-WAI_ADJ코0=Waitahan
+WAI_ADJ코1=Waitaha
 AOT코0=Aotearoa
-AOT_ADJ코0=Aotearoan
+AOT_ADJ코2=Aotearoa
 HAW코0=Hawai'i
 HAW_ADJ코0=Hawaiian
 MAU코0=Maui
@@ -737,9 +737,9 @@ VIT코0=Viti
 VIT_ADJ코0=Vitian
 maori코0=Maori
 polynesian_tribe코0=Polynesian Tribe
-polynesian_tribe_desc코0=This is the form of government of the tribes in Polynesia.
+polynesian_tribe_desc코1=A Polynesian Tribe is the form of government where a leader manages to hold authority over a tribe or group of tribes but the nation does not act as a unified one.
 polynesian_kingdom코0=Polynesian Kingdom
-polynesian_kingdom_desc코0=A Polynesian Kingdom is the form of government where a monarch unites tribes under their rule.
+polynesian_kingdom_desc코1=A Polynesian Kingdom is the form of government where a polynesian monarch manages to unite the usually compiting tribes under their rule and act as a united nation.
 polynesian_tech코0=Polynesian
 polynesian_tech_desc코1=With the Polynesian technology group, technology levels are 100% more expensive (200%).
 pacific_spearman코1=Polynesian Spearmen
@@ -769,8 +769,8 @@ maori_ideas_start코0=Iwi System
 maori_ideas_bonus코0=Maori Ambition
 sons_of_kupe코0=Sons of Kupe
 sons_of_kupe_desc코1=Estimated to have occurred sometime in the 11th century, Kupe's Voyage is a legendary story shared by all Maori. It tells of a hero from Hawaiki who set off on a voyage with his wife Kuramarotini in her great canoe, Matawhourua. On their legendary voyage they encountered countless sea monsters, demons, and harsh weathers before discovering the incredible land of Aotearoa. Upon returning to Hawaiki, he told his people of the incredible things he saw, and that a new life waited for them on these distant shores. It is from these enraptured listeners that we are descended, and the voyager spirit is something that exists at the very heart of our people.
-kaitiakitanga코0=kaitiakitanga
-kaitiakitanga_desc코1=Kaikiatitanga is the sacred guardianship that all Maori owe to the sky, the sea, and the land. One who practices this tradition is kaitiaki or guardian and is a sacred guardian who defends the inanimate forces of Mana that surround us but are incapable of defending themselves. To desecrate a holy site is considered equivalent to murder in Maori society, so harmful acts such as polluting a river, chopping down a forest, or excessively plundering natural resources are considered sin without measure. It is only by living in harmony with our environment and restricting ourselves on how much we encroach on nature is the only way to please the Gods and grow rich with Mana.
+kaitiakitanga코0=Kaitiakitanga
+kaitiakitanga_desc코1=Kaikiatitanga is the sacred guardianship that all Maori owe to the sky, the sea, and the land. One who practices this tradition is Kaitiaki or guardian and is a sacred guardian who defends the inanimate forces of Mana that surround us but are incapable of defending themselves. To desecrate a holy site is considered equivalent to murder in Maori society, so harmful acts such as polluting a river, chopping down a forest, or excessively plundering natural resources are considered sin without measure. It is only by living in harmony with our environment and restricting ourselves on how much we encroach on nature is the only way to please the Gods and grow rich with Mana.
 kaumatua코0=Kaumatua
 kaumatua_desc코1=Although we are not ruled by the elder council, they are highly influential in our society. A Kaumatua is elected by their family for their supreme intellect, wisdom, and renown to ensure that the family and Iwi as a whole continues to maintain the sacred traditions valued to the Maori. Kaumatua holds the soul of an immortal demi-god who possesses the power of reincarnation, and have existed across countless lifetimes, and may return at any moment to give the family guidance.
 kapa_haka코0=Kapa Haka
@@ -849,15 +849,15 @@ samoa_faavae코0=Fa'avae I Le Atua Samoa
 samoa_faavae_desc코0=The religious practices of our people vary wildly in doctrine and denomination, but all are bound by the phrase “Samoa is founded on God”. It matters not what religion we practice, for it is Samoa itself which is holy among all gods. Sunday is a day of great rest for all Samoans, to worship their respective gods in the way they choose and spend time amongst their family. It matters not what faith you follow, for all are accepted in Fa'a Samoa.
 samoa_trade코0=Polynesian Triangle Trade
 samoa_trade_desc코0=For years, Samoan traders have been involved in trading across the Polynesian Triangle; primarily with Fiji and Tonga, our close neighbours. Many societies would merely abandon the notion of trade across such a vast ocean, but our voyagers and traders understand the way of the waves better than any others. No matter the size of our nation, we shall remember the navigational techniques that brought riches to Samoa, and perhaps someday Samoa will reap the rich trade goods from all over the world…
-estate_kahuna코0=Kahuna
-estate_tohunga코0=Tohunga
-estate_bete코0=Bete
-estate_taula_otua코0=Taula 'Otua
-estate_taula_aitu코0=Taula Aitu
-estate_alii코0=Ali-i
+estate_kahuna코1=Kahuna
+estate_tohunga코1=Tohunga
+estate_bete코1=Bete
+estate_taula_otua코1=Taula 'Otua
+estate_taula_aitu코1=Taula Aitu
+estate_alii코1=Ali-i
 estate_rangatira코0=Rangatira
-estate_eiki코0='Eiki
-estate_ratu코0=Ratu
+estate_eiki코1='Eiki
+estate_ratu코1=Ratu
 iroquoian_federation_ideas코0=Iroquoian Federation Ideas
 iroquoian_federation_ideas_start코0=Iroquoian Traditions
 iroquoian_federation_ideas_bonus코0=Iroquoian Ambitions
@@ -968,7 +968,7 @@ unite_fiji_title코0=Unite Fiji
 unite_fiji_desc코0=The clans are one once more and we can claim the title of ruler of Fiji.
 polynesian_navy_build_title코0=Oceanic People
 polynesian_navy_build_desc코0=No matter what the Polynesian people call home, one thing they all have in common is a spiritual connection with the sea. Sailing is often seen as a sacred tradition, and in some societies the sailor's canoe is seen as an extension of his own body, and in even more extreme cases the canoe is seen to have Mana or a soul of its own and is sovereign and sacred among all things.
-polynesian_grand_navy_title코0=Polynesian Triangle
+polynesian_grand_navy_title코1=Polynesian Triangle
 polynesian_grand_navy_desc코0=The Polynesian Triangle refers to the area of the Pacific Ocean inhabited by the Polynesians. The tips of the triangle refers to Hawaii, the west corner to Aotearoa, and the east corner to Rapa Nui. Polynesian traders and voyagers alike would utilize the Polynesian Triangle to engage in trade, exploration, and colonisation. The native Polynesians would actually refer to this region as an octopus, representing the various invisible pathways that navigators would follow along the sea. This octopus has various names in Polynesian societies including Taumata-Fe'e-Fa'atupu-Hau or Grand Octopus of Prosperity referring to the great riches that exploration and trade would bring to their society.
 gain_mana_title코0=Gain Mana
 gain_mana_desc코0=Mana is roughly equivalent to the Western expression of a soul or spirit. But, Mana is also the measure of a man's prestige and piety, and an honourable man is seen as possessing a lot of Mana while a lesser member of society is seen as being shallow in Mana. In some societies, someone who is dedicated to prayer and the accumulation of Mana can gain the favour of the gods and request them to perform tasks such as changing the weather or bringing islands out of the ocean. It's from this that the west's mistake of equating Mana with Magic has come from.
@@ -1425,7 +1425,7 @@ crown_colony_government코0=Crown Colony
 crown_colony_government_desc코0=A Crown Colony is a colony type that is directly controlled by the metropolis.
 private_enterprise_colony_government코0=Private Enterprise Colony
 private_enterprise_colony_government_desc코0=A colony run as a Private Enterprise focuses on extracting resources from a colony and bringing it back home.
-self_governing_colony_government_government코0=Self-Governing Colony
+self_governing_colony_government코0=Self-Governing Colony
 self_governing_colony_government_desc코0=A type of colony that is autonomous, a Self Governing Colony acts as a country inside a country.
 custom_idea_possible_disengagement_chance코0=Naval Disengagement Chance
 custom_idea_possible_disengagement_chance_desc코0=By training our ships, we will be able to avoid unnecessary losses in the sea when engaging other navies.
@@ -1458,6 +1458,7 @@ desc_grow_in_harmony_mod코0=The Federation benefits us all.
 native_federations_event.4.b코0=Leader Gets the Best Part.
 primus_inter_pares_mod코0=Primus Inter Pares
 desc_primus_inter_pares_mod코0=As we are the leaders of the Federation, we are the ones getting the biggest benefits. It is only fair.
+guru_teaching코0=Guru Teachings
 native_federations_event.5.t코0=Problems for the Federation
 native_federations_event.5.d코0=The leader of our Federation has been exhibiting an odd behavior lately and some concerning gossip have spread across the tribes. While nobody has raised their voices, the leaders of the other members of the Federation are worried and have gathered together to discuss the issue.
 native_federations_event.5.a코0=This is a problem.
