--- a/en/north_america_redone_l_english.properties
+++ b/en/north_america_redone_l_english.properties
@@ -262,7 +262,7 @@ western_kentucky_area코0=Western Kentucky
 southern_illinois_area코0=Southern Illinois
 iowa_area코0=Iowa
 kansas_area코0=Kansas
-minnessota_area코0=Minnessota
+minnessota_area코0=Minnesota
 texas_plains_area코0=Texas Plains
 st_john_valley_area코0=St John's Valley
 trois_rivieres_area코0=Trois-Rivieres
