--- a/en/astu_1_31_l_english.properties
+++ b/en/astu_1_31_l_english.properties
@@ -2,7 +2,7 @@
 CENTRALIZE_STATE_DESC코2=§YCentralize State§!\nSpend $COST|Y$ of government progress to centralize the $STATE|Y$ in the most developed province, reducing it's governing cost by $REDUCTION|0Y$. It will take $YEARS|0Y$ years.
 CENTRALIZE_STATE_COST코0=You don't have enough goverment progress
 CENTRALIZE_STATE_TERRITORY코0=You can only centralize a state, not a territory.
-CENTRALIZE_STATE_DEV코0=Governing cost of $PROVINCE$ must be greater than $PROVINCE_DEV|0$ development
+CENTRALIZE_STATE_DEV코1=Governing cost of $STATE$ must be $STATE_DEV|0$ development, or higher
 CENTRALIZE_STATE_PROVINCES코0=You don't own all the provinces in the State
 CENTRALIZE_STATE_DONE코0=You already have centralized this State
 CENTRALIZE_STATE_PROGRESS코0=The construction is already in progress. It will be finished by $DATE$
@@ -25,10 +25,11 @@ CENTRALIZE_STATE_CANCEL_TITLE코0=Centralize state construction removed
 CENTRALIZE_STATE_CANCEL_SETUP코0=When centralize state construction is removed due to owner change.
 CENTRALIZE_STATE_CANCEL_1코0=Centralize state construction removed
 CENTRALIZE_STATE_CANCEL_2코0=The construction in $PROVINCE$ has been removed.
-CENTRALIZE_STATE_CANCEL_3코0=You don't own all provinces in $STATE$.
+CENTRALIZE_STATE_CANCEL_3코1=You don't own all provinces in the state.
 CENTRALIZE_STATE_CANCEL_LOG코0=Centralize state construction has been removed in $PROVINCE$.
 CENTRALIZE_STATE_CANCEL_BTN1코0=OK
 CONFIRMABANDONSTATECENTRALIZED코0=$STATE$ will no longer be a centralized state.
 INFLACTION_REDUCTION코0=Inflaction reduction is modified by:\n
 MODIFIER_STATE_GOVERNING_INCREASE_COST코0=State Governing Increase Cost
+CENTRALIZE_STATE_CAPITAL코0=You can't centralize your capital state
 
