--- a/en/tmm_l_english.properties
+++ b/en/tmm_l_english.properties
@@ -1029,4 +1029,9 @@ DIPLO_SAILORS코0=$WHO$ Sailors:
 DIPLO_LOW_SAILORS코0=$WHO$ has low Sailors: 
 DIPLO_RELATIVE_OPINION코0=$WHO$ relative opinion of $COUNTRY01$ and $COUNTRY02$: 
 ENFORCE_PEACE_CANNOT_LEAGUE_WAR코0=You cannot enforce peace in a Religious League War.
-CANNOT_MOVE_ALREADY_IN_PROGRESS:=The $GREATPROJECT|Y$ is already being moved to $PROVINCE|Y$
+CANNOT_MOVE_ALREADY_IN_PROGRESS코0=The $GREATPROJECT|Y$ is already being moved to $PROVINCE|Y$
+CANNOT_EXTEND_REGENCY_TOO_FAR_IN_FUTURE코0=The Regency doesn't end until $DATE$, wait until there's less than a year to go.
+HAS_REFORM_ON_LEVEL코0=Has a level $LEVEL|Y$ Government Reform.\n
+HAS_NOT_REFORM_ON_LEVEL코0=Has a level $LEVEL|Y$ Government Reform.\n
+CURRENT_GURU_IS코0=Current Guru is 
+CURRENT_GURU_IS_NOT코0=Current Guru is NOT 
