--- a/en/astu_1_31_l_english.properties
+++ b/en/astu_1_31_l_english.properties
@@ -32,4 +32,17 @@ CONFIRMABANDONSTATECENTRALIZED코0=$STATE$ will no longer be a centralized state
 INFLACTION_REDUCTION코0=Inflaction reduction is modified by:\n
 MODIFIER_STATE_GOVERNING_INCREASE_COST코0=State Governing Increase Cost
 CENTRALIZE_STATE_CAPITAL코0=You can't centralize your capital state
+WARNING_CONSTRUCTION_LOST코0=Your ships under construction will be canceled if the new province has no port
+CONSTRUCTION_LOST_TITLE코0=Ship constructions canceled
+CONSTRUCTION_LOST_SETUP코0=When migrating some constructions are removed due to being invalid in the new province.
+CONSTRUCTION_LOST_1코0=Constructions canceled
+CONSTRUCTION_LOST_2코0=Ships under construction were canceled due to migration
+CONSTRUCTION_LOST_3코0=You can´t build ships if you have no port
+CONSTRUCTION_LOST_LOG코0=Ships lost due to migrating into a new province
+CONSTRUCTION_LOST_BTN1코0=OK
+PRIMARY_LOCAL코0=§YPrimary controller§!\nThis player will receive all the events.\n
+NOT_PRIMARY_LOCAL코0=§YSecondary controller§!\nThis player will not receive events.\n
+PRIMARY_LOCAL_OBSERVER코0=§YPrimary controller§!\nThis player is in observer mode, he will only see events of the ingame selected country.\n
+COOP_NOT_ENABLED코0=§RCooperative mode is not enabled§!\n
+KICK_PLAYER코0=Right Click to kick the player from the game.\n
 
